ingress/traefik/traefik-app1/resul-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: results
  labels:
    app: python
    role: results
    version: v1
spec:
  containers:
    - name: app
      image: wonchaitanya/vote:v2
      ports:
        - containerPort: 80
          protocol: TCP
