ingress/traefik/traefik-app1/vote-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vote
  labels:
    app: python
    role: vote
    version: v1
spec:
  containers:
    - name: app
      image: wonchaitanya/vote:v1
      ports:
        - containerPort: 80
          protocol: TCP
