ingress/traefik/traefik-app1/resul-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: results
 labels: 
    role: results
spec:
 selector:
  role: results
 ports:
  - port: 81
    targetPort: 80
    nodePort: 30010
 type: NodePort
 externalIPs:
   - 206.189.150.190
   - 206.189.150.192
