ingress/traefik/traefik-app1/vote-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: vote
 labels: 
    role: vote
spec:
 selector:
  role: vote
 ports:
  - port: 82
    targetPort: 80
    nodePort: 30000
 type: NodePort
 externalIPs:
   - 206.189.150.190
   - 206.189.150.192
