ingress/traefik/traefik-app1/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
   name: vote
   annotations:
     kubernetes.io/ingress.class: traefik
spec:
   rules:
    - host: vote.example.org
      http:
         paths:
           - path: /
             backend: 
              serviceName: vote
              servicePort: 82
           
    - host: results.example.org
      http:
         paths:
           - path: /
             backend: 
              serviceName: results
              servicePort: 81
